# karin

./: .gitattributes  .gitignore  CMakePresets.json
.github/actions/setup-swiftshader/: action.yml
.github/actions/setup-vulkan-ubuntu/: action.yml
.github/actions/setup-vulkan-windows/: action.yml
.github/workflows/: ci-ubuntu.yml  ci-windows-vulkan.yml  ci-windows.yml  core-ci.yml
core/: CMakeLists.txt  vcpkg.json
core/examples/: CMakeLists.txt
core/examples/graphics/box_shadow/: CMakeLists.txt  main.cpp
core/examples/graphics/clipping/: CMakeLists.txt
core/examples/graphics/draw_image/: CMakeLists.txt
core/examples/graphics/draw_path/: CMakeLists.txt
core/examples/graphics/draw_primitive_geometry/: CMakeLists.txt
core/examples/graphics/draw_text/: CMakeLists.txt
core/examples/graphics/draw_text_japanese/: CMakeLists.txt
core/examples/graphics/fill_path/: CMakeLists.txt  main.cpp
core/examples/graphics/fill_primitive_geometry/: CMakeLists.txt
core/examples/graphics/graphics/clipping/: main.cpp
core/examples/graphics/graphics/draw_image/: main.cpp
core/examples/graphics/graphics/draw_path/: main.cpp
core/examples/graphics/graphics/draw_primitive_geometry/: main.cpp
core/examples/graphics/graphics/draw_text/: main.cpp
core/examples/graphics/graphics/draw_text_japanese/: main.cpp
core/examples/graphics/graphics/fill_primitive_geometry/: main.cpp
core/examples/graphics/graphics/hello_graphics/: main.cpp
core/examples/graphics/graphics/offscreen_rendering/: CMakeLists.txt  main.cpp
core/examples/graphics/graphics/transform/: main.cpp
core/examples/graphics/hello_graphics/: CMakeLists.txt
core/examples/graphics/layer/: CMakeLists.txt  main.cpp
core/examples/graphics/linear_gradient_pattern/: CMakeLists.txt  main.cpp
core/examples/graphics/multiple_layer/: CMakeLists.txt  main.cpp
core/examples/graphics/offscreen_rendering/: CMakeLists.txt
core/examples/graphics/opacity/: CMakeLists.txt  main.cpp
core/examples/graphics/radial_gradient_pattern/: CMakeLists.txt  main.cpp
core/examples/graphics/transform/: CMakeLists.txt
core/examples/graphics/z-index/: CMakeLists.txt  main.cpp
core/examples/gui/border/: CMakeLists.txt  main.cpp
core/examples/gui/clipping/: CMakeLists.txt  main.cpp
core/examples/gui/hello_clickevent/: CMakeLists.txt
core/examples/gui/hello_layout/: CMakeLists.txt
core/examples/gui/opacity/: CMakeLists.txt  main.cpp
core/examples/gui/shadow/: CMakeLists.txt  main.cpp
core/examples/gui/text_node/: CMakeLists.txt
core/examples/system/window/hello_window/: CMakeLists.txt
core/examples/system/window/maximize_window/: CMakeLists.txt
core/examples/system/window/set_size/: CMakeLists.txt
core/include/karin/: graphics.h
core/scripts/: check-include-guard.ps1  update-graphics-test-fixture-ubuntu.sh  update-graphics-test-fixture-windows.ps1
core/src/graphics/: CMakeLists.txt  WindowRenderer.cpp  canvas.cpp  canvas.h  draw_instruction.h  font_renderer_impl.h  graphics_context.cpp  offscreen_renderer.cpp  offscreen_renderer_impl.h  offscreen_renderer_target.h  painter.h  path.cpp  path_impl.h  platform.h  renderer_base.cpp  renderer_impl.h  window_renderer.cpp
core/src/graphics/d2d/: d2d_canvas.cpp  d2d_canvas.h  d2d_color.h  d2d_consts.h  d2d_context.h  d2d_device_resources.cpp  d2d_device_resources.h  d2d_font_renderer.cpp  d2d_font_renderer.h  d2d_geometry.h  d2d_graphics_context_impl.cpp  d2d_offscreen_renderer_impl.cpp  d2d_offscreen_renderer_impl.h  d2d_offscreen_surface.cpp  d2d_offscreen_surface.h  d2d_painter.cpp  d2d_painter.h  d2d_renderer_impl.cpp  d2d_renderer_impl.h  d2d_surface.h  d2d_window_surface.cpp  d2d_window_surface.h
core/src/graphics/text/: font_loader.h  font_loader_platform.h  font_manager.cpp  font_manager.h  harfbuzz_provider.h  platform.h  text_engine.cpp  text_engine_impl.cpp  text_engine_impl.h  text_layouter.h
core/src/graphics/text/freetype/: freetype_font_face.h
core/src/graphics/text/unix/: freetype_fontconfig_font_loader.h
core/src/graphics/text/windows/: dwrite_converter.h  dwrite_font_face.h  dwrite_font_loader.h  freetype_dwrite_font_loader.h
core/src/graphics/vulkan/: glm_geometry.h  vma.h  vulakn_functions.h  vulkan_buffer.h  vulkan_canvas.cpp  vulkan_canvas.h  vulkan_context.cpp  vulkan_context.h  vulkan_debug_manager.cpp  vulkan_debug_manager.h  vulkan_device_resources.cpp  vulkan_device_resources.h  vulkan_font_renderer.cpp  vulkan_font_renderer.h  vulkan_frame_context.cpp  vulkan_frame_context.h  vulkan_geometry_buffer.cpp  vulkan_geometry_buffer.h  vulkan_glyph_cache.cpp  vulkan_glyph_cache.h  vulkan_graphics_context_impl.cpp  vulkan_helpers.h  vulkan_offscreen_frame_context.cpp  vulkan_offscreen_frame_context.h  vulkan_offscreen_renderer_impl.cpp  vulkan_offscreen_renderer_impl.h  vulkan_offscreen_surface.cpp  vulkan_offscreen_surface.h  vulkan_painter.cpp  vulkan_painter.h  vulkan_pipeline.cpp  vulkan_pipeline.h  vulkan_renderer_impl.cpp  vulkan_renderer_impl.h  vulkan_surface.h  vulkan_tessellator.h  vulkan_view_context.cpp  vulkan_view_context.h  vulkan_window_surface.cpp  vulkan_window_surface.h
core/src/graphics/vulkan/shaders/: common.glsl  draw.slang  geometry.frag  geometry.frag.spv  geometry.slang  push_constants.h  push_constants.slang  shader_code.h  shader_layout.h  shaders.h  shadow.slang  text.frag.spv  text.slang  vertex.slang
core/src/graphics/vulkan/shaders/draw/: pattern.slang  sdf.slang
core/src/system/: CMakeLists.txt  application_impl.h  platform.h  window_impl.h
core/src/system/windows/: win_application_impl.h  win_context.h  win_converter.h  win_event.h  win_window_class_registry.h  win_window_impl.cpp  win_window_impl.h
core/src/system/x11/: x11_application_impl.h  x11_context.h  x11_converter.h  x11_event.h  x11_window_impl.h
core/test/: CMakeLists.txt
core/tools/slang_shader_compiler/: CMakeLists.txt  README.md  generator.cpp  generator.h  main.cpp  print.cpp  print.h  shader_module.h  slang_context.h  util.h
examples/kotlin/: .gitignore
languages/kotlin/: CMakeLists.txt  build.gradle.kts
(+168 files in other folders)
