add_subdirectory(system/window/hello_window)
add_subdirectory(system/window/maximize_window)
add_subdirectory(system/window/set_size)

add_subdirectory(graphics/hello_graphics)
add_subdirectory(graphics/fill_primitive_geometry)
add_subdirectory(graphics/draw_primitive_geometry)
add_subdirectory(graphics/draw_path)
add_subdirectory(graphics/fill_path)
add_subdirectory(graphics/linear_gradient_pattern)
add_subdirectory(graphics/radial_gradient_pattern)
add_subdirectory(graphics/draw_image)
add_subdirectory(graphics/draw_text)
add_subdirectory(graphics/draw_text_japanese)
add_subdirectory(graphics/transform)
add_subdirectory(graphics/offscreen_rendering)
add_subdirectory(graphics/clipping)
add_subdirectory(graphics/z-index)
add_subdirectory(graphics/opacity)
add_subdirectory(graphics/layer)
add_subdirectory(graphics/multiple_layer)

add_subdirectory(gui/hello_layout)
add_subdirectory(gui/text_node)
add_subdirectory(gui/hello_clickevent)
add_subdirectory(gui/clipping)
add_subdirectory(gui/opacity)
add_subdirectory(gui/border)