cmake_minimum_required(VERSION 3.28)
project(karin_examples_clipping)

set(CMAKE_CXX_STANDARD 20)

add_executable(karin_examples_clipping main.cpp)
add_dependencies(karin_examples_clipping karin_system karin_graphics)
target_link_libraries(karin_examples_clipping PRIVATE karin_system karin_graphics)
target_include_directories(karin_examples_clipping PRIVATE ${INCLUDE_DIR})